uni.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans:700|Arimo);

html, body{
	padding:0;
	margin:0;
	font-family: 'Arimo', sans-serif;
}

h1, h2, h3, h4, h5, h6{
	font-family: 'Open Sans', sans-serif;
	margin:0;
	padding:0;
}


nav{
	position:fixed;
	left:50%;
	transform:translateX(-50%);
	font-family: 'Open Sans', sans-serif;
	top:20px;
}

nav ul{
	padding:0;
	margin:0;
	list-style:none;
}
nav li{
	float:left;
	margin:0;
}

nav li a{
	display:block;
	padding: 20px 40px;
	background:#ecf0f1;
	border-style:solid;
	border-color:black;
	border-width:5px;
	border-left-style:none;
	border-right-width:1px;
	color:black;
	text-decoration:none;
	transition: background 0.5s ease;
}
nav li:nth-child(1) a{
	border-top-left-radius:20px;
	border-bottom-left-radius:20px;
	border-left-style:solid;
}
nav li:nth-child(4) a{
	border-top-right-radius:20px;
	border-bottom-right-radius:20px;
	border-right-width:5px;
}

nav li a:hover{
	background:white;
}
nav li a:visited{
	color:black;
}

nav .CurrPage a{
	background:black;
	color:white;
}
nav .CurrPage a:hover{
	background:black;
	color:white;
}

